--- a/Atividades/Aulas_traduzidas/index.html
+++ b/Atividades/Aulas_traduzidas/index.html
@@ -267,26 +267,97 @@
     }
 
     /* =========================================================
-       TRADUÇÕES
-       ========================================================= */
-    const SUPPORTED_STUDENT_LANGS = ['pt-BR','th','my','km','zh-CN'];
-    const T = {
-      'en-US': { ready:'Ready to start', explaining:'Samuel and Hannah are explaining', start:'Start Lesson', pause:'Pause Lesson', repeat:'Repeat', hint:'Hint: tap any line to play from that point.', mute:'Mute', unmute:'Unmute', exit:'Exit' },
-      'pt-BR': { ready:'Pronto para iniciar', explaining:'Samuel e Hannah estão explicando', start:'Iniciar aula', pause:'Pausar aula', repeat:'Repetir', hint:'Dica: toque em qualquer linha do texto para ouvir a partir daquele ponto.', mute:'Silenciar', unmute:'Ativar som', exit:'Sair' },
+   TRADUÇÕES
+   ========================================================= */
 
-      // 🇹🇭 TH (forma mais natural para contexto de aula)
-      'th':    { ready:'พร้อมเริ่มแล้ว', explaining:'ซามูเอลกับฮันนาห์กำลังสอนอยู่', start:'เริ่มบทเรียน', pause:'หยุดชั่วคราว', repeat:'เล่นซ้ำ', hint:'เคล็ดลับ: แตะบรรทัดใดก็ได้เพื่อเริ่มเล่นจากจุดนั้น', mute:'ปิดเสียง', unmute:'เปิดเสียง', exit:'ออก' },
+const SUPPORTED_STUDENT_LANGS = [
+  'pt-BR',
+  'th',
+  'my',
+  'km',
+  'zh-CN'
+];
 
-      // 🇲🇲 MY (mais natural e simples para crianças)
-      'my':    { ready:'စတင်ရန်အဆင်သင့်', explaining:'ဆမ်မြူးအယ်လ်နဲ့ ဟန်နာ တို့ ရှင်းပြနေပါတယ်', start:'သင်ခန်းစာ စတင်မည်', pause:'ခဏရပ်မည်', repeat:'ထပ်ဖတ်မည်', hint:'အကြံပြုချက် - မည်သည့် စာကြောင်းမဆို ထိနှိပ်ပြီး ထိုနေရာမှ စတင်နားထောင်နိုင်ပါတယ်', mute:'အသံပိတ်', unmute:'အသံဖွင့်', exit:'ထွက်မည်' },
+const T = {
 
-      // 🇰🇭 KM (mais natural para “explicando a lição”)
-      'km':    { ready:'ត្រៀមរួចរាល់', explaining:'សាំយូអែល និង ហាណា កំពុងពន្យល់មេរៀន', start:'ចាប់ផ្តើមមេរៀន', pause:'ផ្អាក', repeat:'ស្តាប់ម្ដងទៀត', hint:'គន្លឹះ៖ ចុចលើបន្ទាត់ណាមួយ ដើម្បីស្តាប់ចាប់ពីចំណុចនោះ។', mute:'បិទសំឡេង', unmute:'បើកសំឡេង', exit:'ចាកចេញ' },
+  'en-US': {
+    ready: 'Ready to start',
+    explaining: 'Samuel is explaining',
+    start: 'Start Lesson',
+    pause: 'Pause Lesson',
+    repeat: 'Repeat',
+    hint: 'Hint: tap any line to play from that point.',
+    mute: 'Mute',
+    unmute: 'Unmute',
+    exit: 'Exit'
+  },
 
-      // 🇨🇳 ZH (mais pedagógico e natural em app de aula)
-      'zh-CN': { ready:'准备开始啦', explaining:'Samuel 和 Hannah 正在讲解课程', start:'开始课程', pause:'暂停课程', repeat:'再听一遍', hint:'提示：点击任意一行，从该处开始播放。', mute:'静音', unmute:'取消静音', exit:'退出' },
-    };
-    function t(key){ const pack=T[studentLang]||T['pt-BR']; return (pack&&pack[key])||T['pt-BR'][key]||key; }
+  'pt-BR': {
+    ready: 'Pronto para iniciar',
+    explaining: 'Samuel está explicando',
+    start: 'Iniciar aula',
+    pause: 'Pausar aula',
+    repeat: 'Repetir',
+    hint: 'Dica: toque em qualquer linha do texto para ouvir a partir daquele ponto.',
+    mute: 'Silenciar',
+    unmute: 'Ativar som',
+    exit: 'Sair'
+  },
+
+  'th': {
+    ready: 'พร้อมเริ่ม',
+    explaining: 'ซามูเอลกำลังอธิบาย',
+    start: 'เริ่มบทเรียน',
+    pause: 'หยุดชั่วคราว',
+    repeat: 'เล่นซ้ำ',
+    hint: 'เคล็ดลับ: แตะบรรทัดใดก็ได้เพื่อเริ่มเล่นจากส่วนนั้น',
+    mute: 'ปิดเสียง',
+    unmute: 'เปิดเสียง',
+    exit: 'ออก'
+  },
+
+  'my': {
+    ready: 'စတင်ရန်အဆင်သင့်',
+    explaining: 'ဆမ်မြူးအယ်လ် ဆက်သွယ်ရှင်းလင်းနေသည်',
+    start: 'သင်ခန်းစာ စတင်မည်',
+    pause: 'ခဏရပ်မည်',
+    repeat: 'ထပ်မံဖတ်ပြ',
+    hint: 'အကြံပြုချက် - မည်သည့် စာကြောင်းမဆို ကိုထိနှိပ်ပြီး ထိုနေရာမှ စတင်နားထောင်နိုင်သည်',
+    mute: 'အသံပိတ်',
+    unmute: 'အသံဖွင့်',
+    exit: 'ထွက်မည်'
+  },
+
+  'km': {
+    ready: 'រួចរាល់ដើម្បីចាប់ផ្តើម',
+    explaining: 'សាំយូអែលកំពុងអធិប្បាយ',
+    start: 'ចាប់ផ្តើមមេរៀន',
+    pause: 'ផ្អាក',
+    repeat: 'ធ្វើម្ដងទៀត',
+    hint: 'គន្លឹះ៖ ចុចលើបន្ទាត់ណាមួយ ដើម្បីចាប់ផ្តើមពីចំណុចនោះ។',
+    mute: 'បិទសំឡេង',
+    unmute: 'បើកសំឡេង',
+    exit: 'ចាកចេញ'
+  },
+
+  'zh-CN': {
+    ready: '准备开始',
+    explaining: 'Samuel 正在讲解',
+    start: '开始课程',
+    pause: '暂停课程',
+    repeat: '再听一遍',
+    hint: '提示：点击任意一行，从该处开始播放。',
+    mute: '静音',
+    unmute: '取消静音',
+    exit: '退出'
+  }
+
+};
+
+function t(key) {
+  const pack = T[studentLang] || T['pt-BR'];
+  return (pack && pack[key]) || T['pt-BR'][key] || key;
+}
 
     /* =========================================================
        ESTADO / UTIL
