--- a/Atividades/Aulas_traduzidas/index - Copy.html
+++ b/Atividades/Aulas_traduzidas/index - Copy.html
@@ -160,7 +160,7 @@
       <div class="teacher-header">
         <div class="teacher-title">
           <span style="display:inline-flex;width:10px;height:10px;background:var(--brand);border-radius:50%;"></span>
-          <h2>Learning Time</h2>
+          <h2>Professor Samuel</h2>
         </div>
         <button class="btn btn-outline" id="exitBtn" onclick="exitLesson()" aria-label="Sair">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" aria-hidden="true" viewBox="0 0 16 16" fill="currentColor">
@@ -267,122 +267,97 @@
     }
 
     /* =========================================================
-       TRADUÇÕES
-       ========================================================= */
+   TRADUÇÕES
+   ========================================================= */
 
-    const SUPPORTED_STUDENT_LANGS = [
-      'pt-BR',
-      'th',
-      'my',
-      'km',
-      'zh-CN'
-    ];
+const SUPPORTED_STUDENT_LANGS = [
+  'pt-BR',
+  'th',
+  'my',
+  'km',
+  'zh-CN'
+];
 
-    const T = {
+const T = {
 
-      'en-US': {
-        ready: 'Ready to start',
-        explaining: 'Samuel and Hannah are explaining',
-        start: 'Start Lesson',
-        pause: 'Pause Lesson',
-        repeat: 'Repeat',
-        hint: 'Hint: tap any line to play from that point.',
-        mute: 'Mute',
-        unmute: 'Unmute',
-        exit: 'Exit'
-      },
+  'en-US': {
+    ready: 'Ready to start',
+    explaining: 'Samuel is explaining',
+    start: 'Start Lesson',
+    pause: 'Pause Lesson',
+    repeat: 'Repeat',
+    hint: 'Hint: tap any line to play from that point.',
+    mute: 'Mute',
+    unmute: 'Unmute',
+    exit: 'Exit'
+  },
 
-      'pt-BR': {
-        ready: 'Pronto para iniciar',
-        explaining: 'Samuel e Hannah estão explicando',
-        start: 'Iniciar aula',
-        pause: 'Pausar aula',
-        repeat: 'Repetir',
-        hint: 'Dica: toque em qualquer linha do texto para ouvir a partir daquele ponto.',
-        mute: 'Silenciar',
-        unmute: 'Ativar som',
-        exit: 'Sair'
-      },
+  'pt-BR': {
+    ready: 'Pronto para iniciar',
+    explaining: 'Samuel está explicando',
+    start: 'Iniciar aula',
+    pause: 'Pausar aula',
+    repeat: 'Repetir',
+    hint: 'Dica: toque em qualquer linha do texto para ouvir a partir daquele ponto.',
+    mute: 'Silenciar',
+    unmute: 'Ativar som',
+    exit: 'Sair'
+  },
 
-      'th': {
-        ready: 'พร้อมเริ่ม',
-        explaining: 'ซามูเอลและฮันนาห์กำลังอธิบาย',
-        start: 'เริ่มบทเรียน',
-        pause: 'หยุดชั่วคราว',
-        repeat: 'เล่นซ้ำ',
-        hint: 'เคล็ดลับ: แตะบรรทัดใดก็ได้เพื่อเริ่มเล่นจากส่วนนั้น',
-        mute: 'ปิดเสียง',
-        unmute: 'เปิดเสียง',
-        exit: 'ออก'
-      },
+  'th': {
+    ready: 'พร้อมเริ่ม',
+    explaining: 'ซามูเอลกำลังอธิบาย',
+    start: 'เริ่มบทเรียน',
+    pause: 'หยุดชั่วคราว',
+    repeat: 'เล่นซ้ำ',
+    hint: 'เคล็ดลับ: แตะบรรทัดใดก็ได้เพื่อเริ่มเล่นจากส่วนนั้น',
+    mute: 'ปิดเสียง',
+    unmute: 'เปิดเสียง',
+    exit: 'ออก'
+  },
 
-      'my': {
-        ready: 'စတင်ရန်အဆင်သင့်',
-        explaining: 'ဆမ်မြူးအယ်လ် နှင့် ဟန်နာ က ရှင်းလင်းနေသည်',
-        start: 'သင်ခန်းစာ စတင်မည်',
-        pause: 'ခဏရပ်မည်',
-        repeat: 'ထပ်မံဖတ်ပြ',
-        hint: 'အကြံပြုချက် - မည်သည့် စာကြောင်းမဆို ကိုထိနှိပ်ပြီး ထိုနေရာမှ စတင်နားထောင်နိုင်သည်',
-        mute: 'အသံပိတ်',
-        unmute: 'အသံဖွင့်',
-        exit: 'ထွက်မည်'
-      },
+  'my': {
+    ready: 'စတင်ရန်အဆင်သင့်',
+    explaining: 'ဆမ်မြူးအယ်လ် ဆက်သွယ်ရှင်းလင်းနေသည်',
+    start: 'သင်ခန်းစာ စတင်မည်',
+    pause: 'ခဏရပ်မည်',
+    repeat: 'ထပ်မံဖတ်ပြ',
+    hint: 'အကြံပြုချက် - မည်သည့် စာကြောင်းမဆို ကိုထိနှိပ်ပြီး ထိုနေရာမှ စတင်နားထောင်နိုင်သည်',
+    mute: 'အသံပိတ်',
+    unmute: 'အသံဖွင့်',
+    exit: 'ထွက်မည်'
+  },
 
-      'km': {
-        ready: 'រួចរាល់ដើម្បីចាប់ផ្តើម',
-        explaining: 'សាំយូអែល និង ហាណា កំពុងអធិប្បាយ',
-        start: 'ចាប់ផ្តើមមេរៀន',
-        pause: 'ផ្អាក',
-        repeat: 'ធ្វើម្ដងទៀត',
-        hint: 'គន្លឹះ៖ ចុចលើបន្ទាត់ណាមួយ ដើម្បីចាប់ផ្តើមពីចំណុចនោះ។',
-        mute: 'បិទសំឡេង',
-        unmute: 'បើកសំឡេង',
-        exit: 'ចាកចេញ'
-      },
+  'km': {
+    ready: 'រួចរាល់ដើម្បីចាប់ផ្តើម',
+    explaining: 'សាំយូអែលកំពុងអធិប្បាយ',
+    start: 'ចាប់ផ្តើមមេរៀន',
+    pause: 'ផ្អាក',
+    repeat: 'ធ្វើម្ដងទៀត',
+    hint: 'គន្លឹះ៖ ចុចលើបន្ទាត់ណាមួយ ដើម្បីចាប់ផ្តើមពីចំណុចនោះ។',
+    mute: 'បិទសំឡេង',
+    unmute: 'បើកសំឡេង',
+    exit: 'ចាកចេញ'
+  },
 
-      'zh-CN': {
-        ready: '准备开始',
-        explaining: 'Samuel 和 Hannah 正在讲解',
-        start: '开始课程',
-        pause: '暂停课程',
-        repeat: '再听一遍',
-        hint: '提示：点击任意一行，从该处开始播放。',
-        mute: '静音',
-        unmute: '取消静音',
-        exit: '退出'
-      }
+  'zh-CN': {
+    ready: '准备开始',
+    explaining: 'Samuel 正在讲解',
+    start: '开始课程',
+    pause: '暂停课程',
+    repeat: '再听一遍',
+    hint: '提示：点击任意一行，从该处开始播放。',
+    mute: '静音',
+    unmute: '取消静音',
+    exit: '退出'
+  }
 
-    };
+};
 
-    // ✅ Normaliza códigos vindos do lesson.txt (ex: th-TH/my-MM/km-KH -> th/my/km)
-    function normalizeStudentLang(raw) {
-      const s = String(raw || '').trim();
-      if (!s) return 'pt-BR';
-
-      // Direto
-      if (T[s]) return s;
-
-      // Base (th-TH -> th)
-      const base = s.split('-')[0];
-      if (T[base]) return base;
-
-      // Casos comuns do seu projeto
-      if (s === 'th-TH') return 'th';
-      if (s === 'my-MM') return 'my';
-      if (s === 'km-KH') return 'km';
-      if (s === 'zh' || s === 'zh-Hans' || s === 'zh-hans') return 'zh-CN';
-
-      // Português genérico -> pt-BR
-      if (s === 'pt' || s.startsWith('pt-')) return 'pt-BR';
-
-      return 'pt-BR';
-    }
-
-    function t(key) {
-      const s = normalizeStudentLang(studentLang);
-      const pack = T[s] || T['pt-BR'];
-      return (pack && pack[key]) || T['pt-BR'][key] || key;
-    }
+function t(key) {
+  const pack = T[studentLang] || T['pt-BR'];
+  return (pack && pack[key]) || T['pt-BR'][key] || key;
+}
 
     /* =========================================================
        ESTADO / UTIL
@@ -487,7 +462,6 @@
 
         const rawLines = data.split('\n');
         studentLang = detectStudentLangFromLines(rawLines);
-        studentLang = normalizeStudentLang(studentLang);
 
         applyUITranslations();
         processTextFile(data);
@@ -575,8 +549,7 @@
       for (const line of lines) {
         const parts = line.split('|');
         if (parts.length >= 2) {
-          const langRaw = (parts[1] || '').trim();
-          const lang = normalizeStudentLang(langRaw);
+          const lang = (parts[1] || '').trim();
           if (lang && lang !== 'en-US' && SUPPORTED_STUDENT_LANGS.includes(lang)) return lang;
         }
       }
@@ -584,8 +557,7 @@
       for (const line of lines) {
         if (!line.startsWith('table-row')) continue;
         let m; while ((m = re.exec(line)) !== null) {
-          const codeRaw = m[1];
-          const code = normalizeStudentLang(codeRaw);
+          const code = m[1];
           if (code && code !== 'en-US' && SUPPORTED_STUDENT_LANGS.includes(code)) return code;
         }
       }
