--- a/Atividades/Aulas_traduzidas/index - Copy (2).html
+++ b/Atividades/Aulas_traduzidas/index - Copy (2).html
@@ -244,7 +244,7 @@
     function setActorByLang(lang){
       currentActor = (lang === 'en-US') ? 'samuel' : 'hannah';
       const titleEl = document.querySelector('.teacher-title h2');
-      if (titleEl) titleEl.textContent = (currentActor === 'samuel') ? 'Samuel' : 'Hannah';
+      if (titleEl) titleEl.textContent = (currentActor === 'samuel') ? 'Professor Samuel' : 'Hannah';
       const img = document.getElementById('robotImage');
       if (img) img.alt = (currentActor === 'samuel') ? 'Robô Professor Samuel' : 'Hannah';
     }
