--- a/tools/QAs/QA_Grammar8.html
+++ b/tools/QAs/QA_Grammar8.html
@@ -473,11 +473,11 @@ EXEMPLOS OFICIAIS (COPIE O FORMATO EXATO; NÃO INCLUA METADADOS ADICIONADOS DEPO
   "type": "match",
   "prompt": "Match the words.",
   "pairs": [
-    { "left": "car", "right": "CAR" },
-    { "left": "may", "right": "MAY" }
+    { "left": "a", "right": "tree" },    
+    { "left": "an", "right": "elephant" }
   ],
   "answer": "all",
-  "promptAudio": "/${L}/${U}/${Q}/prompt7.mp3"
+  "promptAudio": "/Level0/Unit4/QA8/prompt10.mp3"
 }
 
 8) order (mínimo)
