--- a/tools/QAs/QA_Grammar8.html
+++ b/tools/QAs/QA_Grammar8.html
@@ -468,16 +468,84 @@ EXEMPLOS OFICIAIS (COPIE O FORMATO EXATO; NÃO INCLUA METADADOS ADICIONADOS DEPO
   "answer": "car"
 }
 
-7) match (mínimo)
+7.1) match com imagem (mínimo)
 {
-  "type": "match",
-  "prompt": "Match the words.",
-  "pairs": [
-    { "left": "a", "right": "tree" },    
-    { "left": "an", "right": "elephant" }
-  ],
-  "answer": "all",
-  "promptAudio": "/Level0/Unit4/QA8/prompt10.mp3"
+"type": "match",
+"prompt": "Look. Match.",
+"pairs": [
+{
+"left": {
+"label": "A TREE",
+"value": "a-tree"
+},
+"right": {
+"image": "/Level0/Unit4/QA8/imagem7.png",
+"value": "a-tree"
+}
+},
+{
+"left": {
+"label": "A RABBIT",
+"value": "a-rabbit"
+},
+"right": {
+"image": "/Level0/Unit4/QA8/imagem8.png",
+"value": "a-rabbit"
+}
+},
+{
+"left": {
+"label": "AN APPLE",
+"value": "an-apple"
+},
+"right": {
+"image": "/Level0/Unit4/QA8/imagem9.png",
+"value": "an-apple"
+}
+},
+{
+"left": {
+"label": "AN ELEPHANT",
+"value": "an-elephant"
+},
+"right": {
+"image": "/Level0/Unit4/QA8/imagem10.png",
+"value": "an-elephant"
+}
+}
+],
+"answer": "all",
+"promptAudio": "/${L}/${U}/${Q}/prompt7.mp3"
+}
+
+7.2) match sem imagem (mínimo)
+{
+"type": "match",
+"prompt": "Match.",
+"pairs": [
+{
+"left": {
+"label": "A",
+"value": "a"
+},
+"right": {
+"label": "tree",
+"value": "a"
+}
+},
+{
+"left": {
+"label": "AN",
+"value": "an"
+},
+"right": {
+"label": "apple",
+"value": "an"
+}
+}
+],
+"answer": "all",
+"promptAudio": "/${L}/${U}/${Q}/prompt7.mp3"
 }
 
 8) order (mínimo)
