--- a/tools/QAs/QA_Grammar8.html
+++ b/tools/QAs/QA_Grammar8.html
@@ -451,21 +451,43 @@ EXEMPLOS OFICIAIS (COPIE O FORMATO EXATO; NÃO INCLUA METADADOS ADICIONADOS DEPO
 
 6) audio_mcq (mínimo)
 {
-  "type": "audio_mcq",
-  "prompt": "Listen and choose.",
-  "promptAudio": "/${L}/${U}/${Q}/prompt6.mp3",
-  "answerAudio": "/${L}/${U}/${Q}/answer6.mp3",
-  "optionAudios": [
-    "/${L}/${U}/${Q}/option6_1.mp3",
-    "/${L}/${U}/${Q}/option6_2.mp3",
-    "/${L}/${U}/${Q}/option6_3.mp3"
-  ],
-  "options": [
-    { "label": "Car", "value": "car" },
-    { "label": "May", "value": "may" },
-    { "label": "Sit down", "value": "sit-down" }
-  ],
-  "answer": "car"
+"type": "audio_mcq",
+"prompt": "Listen. Choose.",
+"promptAudio": "/${L}/${U}/${Q}/prompt6.mp3",
+"options": [
+{
+"label": "A TREE",
+"value": "a-tree",
+"audio": "/Level0/Unit4/QA8/sounds/a-tree.mp3",
+"image": "/Level0/Unit4/QA8/imagem3.png"
+},
+{
+"label": "AN APPLE",
+"value": "an-apple",
+"audio": "/Level0/Unit4/QA8/sounds/an-apple.mp3",
+"image": "/Level0/Unit4/QA8/imagem1.png"
+},
+{
+"label": "A RABBIT",
+"value": "a-rabbit",
+"audio": "/Level0/Unit4/QA8/sounds/a-rabbit.mp3",
+"image": "/Level0/Unit4/QA8/imagem2.png"
+},
+{
+"label": "AN ELEPHANT",
+"value": "an-elephant",
+"audio": "/Level0/Unit4/QA8/sounds/an-elephant.mp3",
+"image": "/Level0/Unit4/QA8/imagem4.png"
+}
+],
+"optionAudios": {
+"a-tree": "/Level0/Unit4/QA8/sounds/a-tree.mp3",
+"an-apple": "/Level0/Unit4/QA8/sounds/an-apple.mp3",
+"a-rabbit": "/Level0/Unit4/QA8/sounds/a-rabbit.mp3",
+"an-elephant": "/Level0/Unit4/QA8/sounds/an-elephant.mp3"
+},
+"answer": "an-apple",
+"answerAudio": "/Level0/Unit4/QA8/sounds/an-apple.mp3"
 }
 
 7.1) match com imagem (mínimo)
