--- a/tools/QAs/QA_Grammar8.html
+++ b/tools/QAs/QA_Grammar8.html
@@ -542,32 +542,20 @@ EXEMPLOS OFICIAIS (COPIE O FORMATO EXATO; NÃO INCLUA METADADOS ADICIONADOS DEPO
 
 7.2) match sem imagem (mínimo)
 {
-"type": "match",
-"prompt": "Match.",
-"pairs": [
-{
-"left": {
-"label": "A",
-"value": "a"
-},
-"right": {
-"label": "tree",
-"value": "a"
-}
-},
-{
-"left": {
-"label": "AN",
-"value": "an"
-},
-"right": {
-"label": "apple",
-"value": "an"
-}
-}
-],
-"answer": "all",
-"promptAudio": "/${L}/${U}/${Q}/prompt7.mp3"
+  "type": "match",
+  "prompt": "Match.",
+  "pairs": [
+    {
+      "left": { "label": "A", "value": "tree" },
+      "right": { "label": "tree", "value": "tree" }
+    },
+    {
+      "left": { "label": "AN", "value": "apple" },
+      "right": { "label": "apple", "value": "apple" }
+    }
+  ],
+  "answer": "all",
+  "promptAudio": "/${L}/${U}/${Q}/prompt7.mp3"
 }
 
 8) order (mínimo)
